# tua-agent

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  GUIDE.md  README.md  dhamma_bench.py  mkdocs.yml  pyproject.toml  tua-dashboard.service
.github/workflows/: ci.yml  docs.yml  publish.yml
.tau/skills/cargo-workspace/: SKILL.md
.tau/skills/concurrency/: SKILL.md
.tau/skills/error-handling/: SKILL.md
.tau/skills/macros/: SKILL.md
.tau/skills/ownership-borrowing/: SKILL.md
.tau/skills/smart-pointers/: SKILL.md
.tua/: config.toml
benchmarks/3task-2026-07-11/: README.md
benchmarks/3task-2026-07-11/task1-split-pair/: Cargo.toml  lib.rs
benchmarks/claude-vs-tua-2026-07-11/: README.md
dev-notes/: features-8-12.md  v0.0.2-plan.md
docs/: 00-roadmap.md  03-tools.md  05-core-types-and-events.md  configuration.md  custom-tui.md
docs/architecture/: index.md  phase-13-paths-agents-resources.md  phase-23-tui-polish.md  phase-5-coding-tools.md
src/tau_agent/: __init__.py  dhamma.py  dhamma_comparison.py  dhamma_extended.py  dhamma_profiles.py  events.py  harness.py  messages.py  tools.py  types.py
src/tau_ai/: openai_compatible.py
src/tau_coding/: __init__.py  paths.py  resources.py  session.py  tools.py
src/tau_coding/tui/: app.py  config.py
src/tua_agent/: __init__.py  checkpoint.py  cli.py  config.py  dashboard.py  intelligence.py  prompt_cache.py  rust_profiles.py  rust_session.py  rust_skills_loader.py  rust_system_prompt.py  rust_tools.py  tui.py
tests/: test_agent_types.py  test_coding_session.py  test_coding_tools.py  test_paths.py  test_resources.py  test_tua_agent.py  test_tui_app.py  test_tui_config.py  test_tui_features.py
(+12 files in other folders)
