[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "tua-agent"
version = "0.0.1"
description = "🦀 Tua Agent — A Rust-specialized AI coding agent built on Tau. 13 Rust tools, 10 skills, 8 coding profiles, web dashboard."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0",
    "httpx[socks]>=0.27",
    "openai>=2.45.0",
    "packaging>=24.0",
    "pydantic>=2.0",
    "pygments>=2.18",
    "python-dotenv>=1.2.2",
    "rich>=13.0",
    "textual>=1.0",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/anuphongsrinawong/tua-agent"
Documentation = "https://github.com/anuphongsrinawong/tua-agent"
Repository = "https://github.com/anuphongsrinawong/tua-agent"
Issues = "https://github.com/anuphongsrinawong/tua-agent/issues"

[project.scripts]
tua = "tua_agent.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tau_ai", "src/tau_agent", "src/tau_coding", "src/tua_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tau_ai", "tau_agent", "tau_coding", "tua_agent"]

[[tool.mypy.overrides]]
module = "pygments.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
